# 2025_11_Thermo_Credit

./: .gitignore  .gitleaks.toml  Makefile  README.md  README_JP.md  config.yml  config_eu.yml  config_jp.yml  config_us.yml  constraints.txt  llms.txt  pyproject.toml  renovate.json  requirements.txt
data/: allocation_q.csv  allocation_q_eu.csv  allocation_q_us.csv  calibrated_theory_params.json  credit.csv  credit_eu.csv  credit_us.csv  external_coupling_jp.csv  external_coupling_us.csv  gdp_eu.csv  money.csv  money_eu.csv  money_us.csv  reg_pressure.csv  reg_pressure_eu.csv  reg_pressure_us.csv  report_events.csv  series_selected.json  series_selected_eu.json  series_selected_us.json  sources.json  worldbank_cache_EMU_NY.GDP.MKTP.CN.json  worldbank_cache_JPN_NY.GDP.MKTP.CN.json  worldbank_cache_USA_NY.GDP.MKTP.CN.json
docs/: definitions.md  mcp_connection_guide.md  thermo_credit_mcp_spec.md  thermo_credit_v2_spec.md
examples/: thermo_credit_mcp_examples.jsonl
lib/: config_loader.py  config_params.py  credit_enrichment.py  ecb_data.py  entropy.py  external_coupling.py  fred.py  indicators.py  loop_area.py  raw_inputs.py  regions.py  report_helpers.py  series_selector.py  temperature.py  theory_calibration.py  theory_figures.py  thermo_credit_mcp.py  thermo_credit_tools.py  worldbank.py
scripts/: 01_build_features.py  02_compute_all_regions.py  02_compute_indicators.py  02_compute_indicators_eu.py  02_compute_indicators_us.py  03_make_report.py  04_build_features_eu.py  05_build_features_us.py  06_make_theory_figures.py  07_calibrate_theory_model.py  backfill_jp.py  ci_prepare_minimal_data.py  (+7 more)
(+52 files in other folders)
