[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thermo-credit"
version = "0.1.0"
description = "Thermodynamic Credit Analysis Framework"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E702",   # multiple statements on one line (intentional in some cases)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from None
    "SIM102", # use single if (sometimes less readable)
    "SIM108", # use ternary operator (sometimes less readable)
    "SIM115", # context manager for files (some uses are intentional)
    "UP035",  # deprecated imports (gradual migration)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N806"]  # allow non-lowercase function/variable names in tests
"scripts/*" = ["N802", "N806", "E402"]  # allow flexibility in scripts, E402 for sys.path modification
"lib/entropy.py" = ["N802"]  # shannon_H functions are named to match mathematical notation

[tool.ruff.lint.isort]
known-first-party = ["lib"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
